crates/stilyagi-markdown/src/snapshots/stilyagi_markdown__tests__links_and_images.snap
---
source: crates/stilyagi-markdown/src/tests.rs
expression: json
---
{
  "schema_version": "1.0.0",
  "document": {
    "uri": "file:///repo/tests/fixtures/corpus/markdown/valid/links-and-images.md.fixture",
    "path": "tests/fixtures/corpus/markdown/valid/links-and-images.md.fixture",
    "syntax": "markdown",
    "natural_language": null,
    "encoding": "utf-8",
    "content_hash": "sha256:e5674961b442f8b912ec419e9ac2dc14243da6a0b3b9a9625ae7c263b4455e62"
  },
  "producers": [
    {
      "kind": "markdown",
      "name": "markdown-rs",
      "version": "1.0.0",
      "options": {
        "frontmatter": true,
        "gfm": true
      }
    }
  ],
  "line_index": [
    0,
    73,
    145,
    216,
    217,
    272
  ],
  "trees": [
    {
      "id": "t0",
      "family": "mdast",
      "syntax": "markdown",
      "root": "n0"
    }
  ],
  "nodes": [
    {
      "id": "n0",
      "tree": "t0",
      "kind": "root",
      "parent": null,
      "children": [
        "n1",
        "n16"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 272
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n1",
      "tree": "t0",
      "kind": "paragraph",
      "parent": "n0",
      "children": [
        "n2",
        "n3",
        "n5",
        "n6",
        "n8",
        "n9",
        "n11",
        "n12",
        "n13",
        "n14",
        "n15"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 215
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n2",
      "tree": "t0",
      "kind": "text",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 0,
        "byte_end": 19
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n3",
      "tree": "t0",
      "kind": "link",
      "parent": "n1",
      "children": [
        "n4"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 19,
        "byte_end": 71
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n4",
      "tree": "t0",
      "kind": "text",
      "parent": "n3",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 20,
        "byte_end": 34
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n5",
      "tree": "t0",
      "kind": "text",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 71,
        "byte_end": 73
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n6",
      "tree": "t0",
      "kind": "linkReference",
      "parent": "n1",
      "children": [
        "n7"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 73,
        "byte_end": 99
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n7",
      "tree": "t0",
      "kind": "text",
      "parent": "n6",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 74,
        "byte_end": 90
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n8",
      "tree": "t0",
      "kind": "text",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 99,
        "byte_end": 113
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n9",
      "tree": "t0",
      "kind": "link",
      "parent": "n1",
      "children": [
        "n10"
      ],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 113,
        "byte_end": 134
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n10",
      "tree": "t0",
      "kind": "text",
      "parent": "n9",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 114,
        "byte_end": 133
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n11",
      "tree": "t0",
      "kind": "text",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 134,
        "byte_end": 145
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n12",
      "tree": "t0",
      "kind": "image",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 145,
        "byte_end": 168
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n13",
      "tree": "t0",
      "kind": "text",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 168,
        "byte_end": 190
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n14",
      "tree": "t0",
      "kind": "image",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 190,
        "byte_end": 214
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n15",
      "tree": "t0",
      "kind": "text",
      "parent": "n1",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 214,
        "byte_end": 215
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    },
    {
      "id": "n16",
      "tree": "t0",
      "kind": "definition",
      "parent": "n0",
      "children": [],
      "fields": {},
      "props": {},
      "span": {
        "byte_start": 217,
        "byte_end": 271
      },
      "flags": {
        "named": true,
        "error": false,
        "missing": false,
        "synthetic": false
      }
    }
  ],
  "regions": [
    {
      "id": "r0",
      "kind": "link_title",
      "scope": [
        "markdown",
        "link_title",
        "decoded"
      ],
      "syntax": "markdown",
      "natural_language": null,
      "text": "Inline title",
      "segments": [
        {
          "text_start": 0,
          "text_end": 12,
          "source": null,
          "synthetic": "decoded_text",
          "node": null,
          "text": "Inline title"
        }
      ],
      "origin_nodes": [
        "n3"
      ],
      "owner": null,
      "attrs": {
        "source_backed": false,
        "title": "Inline title",
        "url": "https://example.com"
      },
      "parent_region": null
    },
    {
      "id": "r1",
      "kind": "image_alt",
      "scope": [
        "markdown",
        "image_alt",
        "decoded"
      ],
      "syntax": "markdown",
      "natural_language": null,
      "text": "plain alt",
      "segments": [
        {
          "text_start": 0,
          "text_end": 9,
          "source": null,
          "synthetic": "decoded_text",
          "node": null,
          "text": "plain alt"
        }
      ],
      "origin_nodes": [
        "n12"
      ],
      "owner": null,
      "attrs": {
        "source_backed": false,
        "url": "plain.png"
      },
      "parent_region": null
    },
    {
      "id": "r2",
      "kind": "image_alt",
      "scope": [
        "markdown",
        "image_alt",
        "decoded"
      ],
      "syntax": "markdown",
      "natural_language": null,
      "text": "AT&T",
      "segments": [
        {
          "text_start": 0,
          "text_end": 4,
          "source": null,
          "synthetic": "decoded_text",
          "node": null,
          "text": "AT&T"
        }
      ],
      "origin_nodes": [
        "n14"
      ],
      "owner": null,
      "attrs": {
        "source_backed": false,
        "url": "decoded.png"
      },
      "parent_region": null
    },
    {
      "id": "r3",
      "kind": "paragraph",
      "scope": [
        "markdown",
        "paragraph"
      ],
      "syntax": "markdown",
      "natural_language": null,
      "text": "This paragraph has an inline link, a reference link, an autolink https://example.org, an image , and a decoded image .",
      "segments": [
        {
          "text_start": 0,
          "text_end": 19,
          "source": {
            "byte_start": 0,
            "byte_end": 19
          },
          "synthetic": null,
          "node": "n1",
          "text": "This paragraph has "
        },
        {
          "text_start": 19,
          "text_end": 33,
          "source": {
            "byte_start": 20,
            "byte_end": 34
          },
          "synthetic": null,
          "node": "n1",
          "text": "an inline link"
        },
        {
          "text_start": 33,
          "text_end": 34,
          "source": {
            "byte_start": 71,
            "byte_end": 72
          },
          "synthetic": null,
          "node": "n1",
          "text": ","
        },
        {
          "text_start": 34,
          "text_end": 35,
          "source": null,
          "synthetic": "softbreak_space",
          "node": null,
          "text": " "
        },
        {
          "text_start": 35,
          "text_end": 51,
          "source": {
            "byte_start": 74,
            "byte_end": 90
          },
          "synthetic": null,
          "node": "n1",
          "text": "a reference link"
        },
        {
          "text_start": 51,
          "text_end": 65,
          "source": {
            "byte_start": 99,
            "byte_end": 113
          },
          "synthetic": null,
          "node": "n1",
          "text": ", an autolink "
        },
        {
          "text_start": 65,
          "text_end": 84,
          "source": {
            "byte_start": 114,
            "byte_end": 133
          },
          "synthetic": null,
          "node": "n1",
          "text": "https://example.org"
        },
        {
          "text_start": 84,
          "text_end": 94,
          "source": {
            "byte_start": 134,
            "byte_end": 144
          },
          "synthetic": null,
          "node": "n1",
          "text": ", an image"
        },
        {
          "text_start": 94,
          "text_end": 95,
          "source": null,
          "synthetic": "softbreak_space",
          "node": null,
          "text": " "
        },
        {
          "text_start": 95,
          "text_end": 117,
          "source": {
            "byte_start": 168,
            "byte_end": 190
          },
          "synthetic": null,
          "node": "n1",
          "text": ", and a decoded image "
        },
        {
          "text_start": 117,
          "text_end": 118,
          "source": {
            "byte_start": 214,
            "byte_end": 215
          },
          "synthetic": null,
          "node": "n1",
          "text": "."
        }
      ],
      "origin_nodes": [
        "n1"
      ],
      "owner": null,
      "attrs": {},
      "parent_region": null
    }
  ],
  "suppressions": [],
  "errors": [],
  "metadata": {}
}
